tests/NormalTests/paczka1/small_fuzzy/21684831.err
Error in line 4: 4Irrm3w S8 73,0
Error in line 11: Xh9R S8 8,1
